# KHAI_Cpp_LabWorks_Ovs

./: .gitignore  README.md
ConsoleColors/: ConsoleColors.vcxproj  ConsoleColors.vcxproj.filters  console_colors.cpp  console_colors.h
ConsoleUI/: ConsoleUI.vcxproj  ConsoleUI.vcxproj.filters  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Shapes.cpp  Shapes.h  UIElements.cpp  UIElements.h  console_graphics.cpp  console_graphics.h  console_io.cpp  console_io.h  console_ui.cpp  console_ui.h  pch.h
DataStructures/: DataStructures.vcxproj  DataStructures.vcxproj.filters  data_structures.cpp  data_structures.h
DataStructures_UT/: DataStructures_UT.cpp  DataStructures_UT.vcxproj  DataStructures_UT.vcxproj.filters  pch.h
KHAI_Labs/: KHAI_Labs.cpp  KHAI_Labs.sln  KHAI_Labs.vcxproj  KHAI_Labs.vcxproj.filters
Lab1/: .gitignore  BoostReminder.txt  CMakeLists.txt  buid.bat  build.bat
Lab1/assets/JsonOriginal/: eng.json  ukr.json
Lab1/assets/css/: app.css
Lab1/assets/html/: app.html
Lab1/assets/js/: app.js
Lab1/assets/localization/: eng.json  loc_files.json  ukr.json
Lab1/src/: JSHelper.cpp  JSHelper.h  Juce.cpp  Juce.h  MyApp.cpp  MyApp.h
Lab1/src/data_structures/: data_structures.cpp
assets/localization/: eng.json
